# mastergoal_qt

./: CMakeLists.txt  Main.qml  README.md  main.cpp
src/app/: App.qml  Logic.qml
src/home/: Home.qml
src/sologame/: SoloGame.qml
src/splashscreen/: SplashScreen.qml
